welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:11: error: expected class or object definition
def cote(c: Color){
^PatternPicture:27: error: expected class or object definition
def carre(){
^PatternPicture:34: error: expected class or object definition
def ligne(nbCarre : Int){
^PatternPicture:41: error: Unmatched closing brace '}' ignored here
}
^